# toolformer

./: .gitignore  gptj_pytorch.py  hugginface_login.py  main.py  pyproject.toml  toolformer_prompt.py  tools.py  train_gptj_toolformer.py  train_pythia_flash_toolformer.py
backend/: app.py  toolformer.py  toolformer_prompt.py  toolformer_pytorch.py  tools.py
data/: process.py
frontend/static/: chat.js  style.css
frontend/template/: index.html
template/: chat.js  index.html
