[project]
name = "toolformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.15.0",
    "google-api-python-client>=2.174.0",
    "langchain>=0.3.26",
    "langchain-qwq>=0.2.0",
    "openai>=1.93.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
    "wolframalpha>=5.1.3",
]
