[project]
name = "toolformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "cohere>=5.15.0",
    "google-api-python-client>=2.174.0",
    "langchain>=0.3.26",
    "langchain-qwq>=0.2.0",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "transformers>=4.53.0",
    "wolframalpha>=5.1.3",
]
